AirquipUAT/force-app/main/default/objects/Knowledge_Article__c/Knowledge_Article__c.object-meta.xml
<CustomObject>
    <description>Knowledge articles for AirQuip service and support teams.</description>
    <label>Knowledge Article</label>
    <nameField>
        <label>Article Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>