AirquipUAT/force-app/main/default/objects/Knowledge_Article__c/fields/Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Article_Body__c</fullName>
    <label>Article Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>