AirquipUAT/force-app/main/default/objects/Knowledge_Article__c/fields/Is_Visible_In_App__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible_In_App__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visible In App</label>
    <type>Checkbox</type>
</CustomField>