AirquipUAT/force-app/main/default/objects/Knowledge_Article__c/fields/Url_Name__c.field-meta.xml
<CustomField>
    <fullName>Url_Name__c</fullName>
    <externalId>true</externalId>
    <label>URL Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>