AirquipUAT/force-app/main/default/objects/Knowledge_Article__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Url_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Visible_In_App__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>