AirquipUAT/force-app/main/default/objects/Knowledge_Article__c/listViews/Published_Articles.listView-meta.xml
<ListView>
    <fullName>Published_Articles</fullName>
    <columns>NAME</columns>
    <columns>Url_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Visible_In_App__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <label>Published Articles</label>
</ListView>